added gsap animation for navbar

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <body>
     <div class="header">
       <nav class="navbar navbar-expand-lg navbar-light navbar_style">
-        <a class="navbar-brand-custom" href="#">FRANCISC PHOTOGRAPHY</a>
+        <h1 class="navbar-brand-custom">Francisc Photography</h1>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler bg-light"
           type="button"
           data-toggle="collapse"
           data-target="#navbarSupportedContent"
@@ -40,16 +40,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-linka" href="#"
                 >Acasă <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Galerie</a>
+              <a class="nav-linka" href="#">Galerie</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-linka dropdown-toggle"
                 href="#"
                 id="navbarDropdown"
                 role="button"
@@ -70,9 +70,7 @@
         </div>
       </nav>
     </div>
-    <h1>Salut</h1>
 
-    <script src="script.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -88,5 +86,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
