added gsap for welcome

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           </ul>
         </div>
       </nav>
+      <div class="titlu"><h2>Surprinde momentul</h2></div>
     </div>
 
     <script
