added sidebar functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <div style="display: none" id="myDiv" class="animate-bottom">
       <div class="header">
         <h1>FRANCISC PHOTOGRAPHY</h1>
+        <div class="image-button">
+          <img
+            class="menu_button"
+            id="menu_button"
+            src="mobile_img/icons8-menu-squared-50.png"
+            alt=""
+          />
+        </div>
       </div>
       <div class="navigation">
         <a href="">Acasa</a>
@@ -44,27 +52,15 @@
         <a href="">Despre mine</a>
         <a href="">Contact</a>
       </div>
-      <div class="image-button">
-        <img
-          class="menu_button"
-          id="menu_button"
-          src="mobile_img/icons8-menu-squared-50.png"
-          alt=""
-        />
-      </div>
+
       <div id="menu-div" class="menu-div">
-        <a href="">Acasa</a>
-        <a href="">Portofoliu</a>
-        <a href="">Servicii</a>
-        <a href="">Despre mine</a>
-        <a href="">Contact</a>
-        <div class="">
-          <img
-            class=""
-            id=""
-            src="mobile_img/icons8-close-window-50.png"
-            alt=""
-          />
+        <div class="collapsed_menu">
+          <p>Tap anywhere to exit</p>
+          <a href="">Acasa</a>
+          <a href="">Portofoliu</a>
+          <a href="">Servicii</a>
+          <a href="">Despre mine</a>
+          <a href="">Contact</a>
         </div>
       </div>
       <div class="cover">
