--- a/index.html
+++ b/index.html
@@ -68,7 +68,44 @@
         <p class="story">BINE AI VENIT RĂU AI NIMERIT</p>
       </div>
     </div>
-
+    <div class="container-image">
+      <div class="row">
+        <div class="column">
+          <img src="images/poza10.jpg" />
+          <img src="rocks.jpg" />
+          <img src="falls2.jpg" />
+          <img src="paris.jpg" />
+          <img src="nature.jpg" />
+          <img src="mist.jpg" />
+          <img src="paris.jpg" />
+        </div>
+        <div class="column">
+          <img src="underwater.jpg" />
+          <img src="ocean.jpg" />
+          <img src="wedding.jpg" />
+          <img src="mountainskies.jpg" />
+          <img src="rocks.jpg" />
+          <img src="underwater.jpg" />
+        </div>
+        <div class="column">
+          <img src="wedding.jpg" />
+          <img src="rocks.jpg" />
+          <img src="falls2.jpg" />
+          <img src="paris.jpg" />
+          <img src="nature.jpg" />
+          <img src="mist.jpg" />
+          <img src="paris.jpg" />
+        </div>
+        <div class="column">
+          <img src="underwater.jpg" />
+          <img src="ocean.jpg" />
+          <img src="wedding.jpg" />
+          <img src="mountainskies.jpg" />
+          <img src="rocks.jpg" />
+          <img src="underwater.jpg" />
+        </div>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
